--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,7 +3,7 @@ dubbo.application.name=dubbo-demo-server
 dubbo.scan.basePackages=com.example
 ## RegistryConfig Bean
 dubbo.registry.id=my-registry
-dubbo.registry.address=zookeeper://localhost:2181?client=curator
-#dubbo.registry.address=nacos://localhost:8848
+#dubbo.registry.address=zookeeper://localhost:2181?client=curator
+dubbo.registry.address = nacos://47.115.124.84:8848
 dubbo.application.qosEnable=false
 nacos.config.server-addr=127.0.0.1:8848
