add nacos config

--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 dubbo.application.name=dubbo-demo-client
 ## RegistryConfig Bean
 dubbo.registry.id=my-registry
-dubbo.registry.address=zookeeper://localhost:2181?client=curator
-#dubbo.registry.address=nacos://localhost:8488
+#dubbo.registry.address=zookeeper://localhost:2181?client=curator
+dubbo.registry.address = nacos://47.115.124.84:8848
+dubbo.config-center.address=nacos://47.115.124.84:8848
 dubbo.application.qosEnable=false
