[功能]:集成nacos配置中心 [进度]:完成

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,5 +5,5 @@ dubbo.scan.basePackages=com.example
 dubbo.registry.id=my-registry
 #dubbo.registry.address=zookeeper://localhost:2181?client=curator
 dubbo.registry.address = nacos://47.115.124.84:8848
+dubbo.config-center.address=nacos://47.115.124.84:8848
 dubbo.application.qosEnable=false
-nacos.config.server-addr=127.0.0.1:8848
