--- a/client/pom.xml
+++ b/client/pom.xml
@@ -12,10 +12,9 @@
     <description>Demo project for Spring Boot</description>
 
     <parent>
+        <artifactId>dubbo_study</artifactId>
         <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.7.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <properties>
@@ -25,54 +24,7 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-        <!-- Dubbo Spring Boot Starter -->
-        <dependency>
-            <groupId>org.apache.dubbo</groupId>
-            <artifactId>dubbo-spring-boot-starter</artifactId>
-            <version>2.7.3</version>
-        </dependency>
-        <!-- zookeeper 注册中心 -->
-        <dependency>
-            <groupId>org.apache.dubbo</groupId>
-            <artifactId>dubbo-registry-zookeeper</artifactId>
-            <version>2.7.3</version>
-        </dependency>
-        <!-- nacos 注册中心 -->
-        <dependency>
-            <groupId>org.apache.dubbo</groupId>
-            <artifactId>dubbo-registry-nacos</artifactId>
-            <version>2.7.3</version>
-        </dependency>
-        <!-- Keep latest Nacos client version -->
-        <dependency>
-            <groupId>com.alibaba.nacos</groupId>
-            <artifactId>nacos-client</artifactId>
-            <version>1.2.1</version>
-        </dependency>
-        <!--nacos 配置中心-->
-        <dependency>
-            <groupId>com.alibaba.nacos</groupId>
-            <artifactId>nacos-spring-context</artifactId>
-            <version>0.3.6</version>
-        </dependency>
-        <!--        &lt;!&ndash; Alibaba Spring Context extension &ndash;&gt;-->
-        <!--        <dependency>-->
-        <!--            <groupId>com.alibaba.spring</groupId>-->
-        <!--            <artifactId>spring-context-support</artifactId>-->
-        <!--            <version>1.0.2</version>-->
-        <!--        </dependency>-->
 
-
-        <!--        测试-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <build>
