--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,8 +2,10 @@ dubbo.application.name=dubbo-demo-server
 # Base packages to scan Dubbo Component: @com.alibaba.dubbo.config.annotation.Service
 dubbo.scan.basePackages=com.example
 ## RegistryConfig Bean
+#dubbo.registry.id=my-registry
 dubbo.registry.id=my-registry
 #dubbo.registry.address=zookeeper://localhost:2181?client=curator
-dubbo.registry.address = nacos://47.115.124.84:8848
+dubbo.registry.address=nacos://47.115.124.84:8848
 dubbo.config-center.address=nacos://47.115.124.84:8848
 dubbo.application.qosEnable=false
+
